--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Dynamic Chatbot UI</title>
+    <title>NOVA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -193,7 +193,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <div class="text-2xl font-bold" style="color: hsl(129, 41%, 97%);">Chatbot</div>
+        <div class="text-2xl font-bold" style="color: hsl(129, 41%, 97%);">NOVA</div>
         <div class="flex space-x-4">
             <a href="index.html" class="nav-link">Home</a>
             <a href="feedback.html" class="nav-link" onclick="alert('Navigating to Feedback page (Not implemented)')">Feedback</a>
