--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="text-2xl font-bold" style="color: hsl(129, 41%, 97%);">NOVA</div>
         <div class="flex space-x-4">
             <a href="index.html" class="nav-link">Home</a>
-            <a href="feedback.html" class="nav-link" onclick="alert('Navigating to Feedback page (Not implemented)')">Feedback</a>
+            <a href="feedback.html" class="nav-link">Feedback</a>
             <a href="#" class="nav-link">About</a>
         </div>
     </nav>
